# lombok-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE.md  README.md
.github/workflows/: ci.yml
lombok-derive/: Cargo.toml
lombok-derive/src/: all_args_constructor.rs  getter.rs  lib.rs  no_args_constructor.rs
lombok-trait/: Cargo.toml
lombok-trait/src/: lib.rs
src/: all_args_constructor.rs  builder.rs  equals_and_hash_code.rs  equals_and_hashcode.rs  getter.rs  getter_mut.rs  lib.rs  no_args_constructor.rs  setter.rs  to_string.rs
src/utils/: mod.rs  syn.rs
tests/: tests.rs
