[package]
name = "lombok"
version = "0.1.0"
description = "Lombok port for Rust"
authors = ["sokomishalov <sokomishalov@mail.ru>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sokomishalov/lombok-rs"
documentation = "https://docs.rs/lombok"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"